# sf6-analyzer

./: .gitignore  CLAUDE.md  app.py  batch_collect.py  calibrate_cv.py  collect_pro_data.py  cv_extractor.py  database.py  live_analyzer.py  main.py  pyproject.toml  requirements.txt  schemas.py  vision_extractor.py  youtube_search.py
.github/workflows/: update_benchmarks.yml
.streamlit/: config.toml
_archive/: snapshot_tab.py
data/: character_top_players.json  frame_data.json  pro_benchmarks.json
logic_engine/: __init__.py  lethal_calculator.py  match_monitor.py  pro_benchmarks.py  punish_detector.py
tests/: test_database.py  test_logic_engine.py  test_schemas.py
