[project]
name = "main-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "streamlink>=8.2.1",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
    "yt-dlp>=2026.3.3",
]
